feat: add mentions feature to messages